--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,11 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+.modal-header{
+  background: #512DA8;
+  color: floralwhite;
+}
+
+.modal-header .close{
+  color: floralwhite;
+}
